deployment.yml
---
apiVersion: v1
kind: Pod
metadata:
    name: command-demo1
    labels:
        app: dev
spec:
    containers:
    - name: command-demo-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
---
---
apiVersion: v1
kind: Pod
metadata:
    name: command-demo2
    labels:
        app: bookstore
spec:
    containers:
    - name: command-demo-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
---
